# dbkp

./: Cargo.toml  Dockerfile  README.md  install-cli.sh
cli/: Cargo.toml  README.md
cli/src/: interactive.rs  main.rs
cli/src/cli/: mod.rs  tests.rs
cli/src/tui/: app.rs  configs.rs  event.rs  mod.rs  model.rs  view.rs
cli/src/tui/backup/: model.rs  view.rs
cli/src/tui/database/: model.rs  view.rs
cli/src/tui/error/: model.rs  view.rs
cli/src/tui/home/: model.rs  view.rs
cli/src/tui/restore/: model.rs  view.rs
cli/src/tui/storage/: model.rs  view.rs
core/: Cargo.toml
core/src/: test_utils.rs  tests.rs
core/src/databases/: mod.rs
core/src/databases/mysql/: tests.rs
core/src/databases/postgres/: connection.rs  tests.rs
core/src/storage/: provider.rs
dev/: docker-compose.yaml
tui/: Cargo.toml
tui/src/: app.rs  configs.rs  event.rs  main.rs  model.rs  ui.rs  utils.rs  view.rs
tui/src/backup/: model.rs  view.rs
tui/src/database/: model.rs  view.rs
tui/src/error/: model.rs  view.rs
tui/src/home/: model.rs  view.rs
tui/src/restore/: model.rs  view.rs
tui/src/storage/: model.rs  view.rs
