[package]
name = "dbkp"
version = "2.0.2"
edition = "2024"
description = "CLI for DB backup and restore"

[[bin]]
name = "dbkp"
path = "src/main.rs"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Maximize size reduction optimizations
panic = "abort"   # Remove panic unwinding code
strip = true      # Strip symbols from binary
debug = false     # No debug symbols

[features]
default = []
vendored-openssl = ["dbkp-core/vendored-openssl"]

[dependencies]
anyhow = "1.0"
dbkp-core = { path = "../core" }
clap = { version = "4.3", features = ["derive", "env"] }
tokio = { version = "1.28", features = ["full"] }
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
ratatui = { version = "0.28.0", features = ["all-widgets", "crossterm"] }
tui-input = { version = "*", features = ["crossterm"], default-features = false }
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
cuid2 = "0.1.4"
async-trait = "0.1.88"
futures = "0.3.31"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.3"
serial_test = "2.0.0"
regex = "1.8"
dotenv = "0.15"
