[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
dbkp-core = { path = "../core" }
ratatui = { version = "0.28.0", features = ["all-widgets", "crossterm"] }
tui-input = { version = "*", features = ["crossterm"], default-features = false }
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "5.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cuid2 = "0.1.4"
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.88"
futures = "0.3.31"
